# Smart-Travel-Planner

./: .gitignore  LICENSE  README.md  Smart Travel Planner.pptx  docker-compose.yml  plan.md
backend/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_rag_schema.py  0002_ivfflat_to_hnsw.py  0003_add_users_and_runs.py  0004_add_webhook_url.py
backend/app/: config.py  db.py  main.py
backend/app/agent/: graph.py  tools.py
backend/app/api/: __init__.py  agent.py  auth.py  deps.py  history.py
backend/app/models/: __init__.py  base.py  rag.py  run.py  user.py
backend/app/services/: auth.py  chunking.py  classifier.py  embeddings.py  rag.py  run_logger.py  weather.py  webhook.py  wikivoyage.py
backend/data/: build_dataset.py  country_baselines.py  destinations.csv  labels.py  seed_destinations.py
backend/model/: results.csv
backend/notebook/: notebook.ipynb
backend/scripts/: destinations.py  eval_rag.py  ingest.py
frontend/: Dockerfile  README.md  nginx.conf  package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.tsx  index.css
frontend/src/components/: ChatMessage.tsx  ToolCallDrawer.tsx  WebhookSettings.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/lib/: api.ts  utils.ts
frontend/src/pages/: AuthPage.tsx  ChatPage.tsx  HistoryPage.tsx
